# qr-code

./: LICENSE  README.md  qr-code.cabal
Codec/: QRCode.hs
