name:                qr-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/qr-code#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  build-depends:       base >= 4.7 && < 5
                     , bytestring
  exposed-modules:     Codec.QRCode
  default-language:    Haskell2010
